@@ -31,14 +31,9 @@
 	.globl _atomic_flag_test_and_set
 
 _atomic_flag_test_and_set:
-	pop	de
-	pop	hl
-	push	hl
-	push	de
 	xor a, a
 	srl	(hl)
 	ccf
 	rla
-	ld	l, a
 	ret
 
